# BLT_Hyena

./: # Code Citations.md  .gitignore  CHANGELOG.md  CODE_CLEANUP_SUMMARY.md  DATA_INFRASTRUCTURE_COMPLETED.md  DIRECTORY_STRUCTURE.md  FINAL_STATUS_REPORT.md  FRAMEWORK_COMPLETION_SUMMARY.md  IMPLEMENTATION_COMPLETION_REPORT.md  PROJECT_STATE.md  PROJECT_STATUS_REPORT.md  README.md  REORGANIZATION_COMPLETE.md  SESSION_ARCHIVE.md  SESSION_KICKSTART.md  TUTORIAL_RESTRUCTURE_PLAN.md  TUTORIAL_SYSTEM_COMPLETE.md  benchmark_blt_performance.py  benchmark_results.pt  conftest.py  demo_blt_position_system.py  demo_complete_framework.py  framework_validation_report.json  git  push_to_all_remotes.sh  pyproject.toml  pytest.ini  requirements.txt  requirements_pretraining.txt  setup.py  setup_multi_push.sh  test_genomic_data_processing.py  validate_cluster_readiness.py
.github/workflows/: ci-cd.yml
admin/: CHANGELOG.md  CODE_CLEANUP_SUMMARY.md  PROJECT_STATE.md  PROJECT_STATUS.md  SESSION_ARCHIVE.md  SESSION_KICKSTART.md
archive/interpretability_outputs/: batch_analysis_summary.json
archive/results/: benchmark_results.pt  framework_validation_report.json
configs/: basic_training.yml  dna_classification_preprocessing.yml  finetuning.yml  large_model_training.yml  large_scale_preprocessing.yml  protein_preprocessing.yml  variant_effect_preprocessing.yml
demo_results/: mixed_precision_report.json
docs/: ANTI_DUPLICATION_WORKFLOW.md  API.md  API_REFERENCE.md  ARCHITECTURE.md  BLT_POSITION_EMBEDDINGS.md  CLUSTER_DEPLOYMENT.md  CONFIGURATION_GUIDE.md  DATA_PREPROCESSING_GUIDE.md  DEPLOYMENT.md  DOCUMENTATION_ENHANCEMENT_SUMMARY.md  EXAMPLES.md  FINE_TUNING.md  INTEGRATION_GUIDE.md  KNOWLEDGE_MANAGEMENT_ENHANCEMENTS.md  OPTIMIZATION.md  PATCHER_IMPLEMENTATION.md  PERFORMANCE_ANALYSIS.md  PRETRAINING_COMPREHENSIVE_GUIDE.md  PYTHON_312_MIGRATION.md  QUICKSTART.md  README.md  SESSION_NOTES_TEMPLATE.md  STATE_DOCUMENTATION_GUIDE.md  TECHNICAL_GUIDE.md  TRAINING_AND_INTERPRETABILITY_GUIDE.md  TUTORIAL.md  USER_GUIDE.md  mixed_precision_performance_report.md  pretraining_guide.md  testing.md
docs/project/: MULTI_PUSH_GUIDE.md
enhanced_training_outputs/: training_report.json  training_report.md
examples/: basic_usage.py  complete_data_pipeline_demo.py  configuration_demo.py  data_pipeline_configuration_guide.py  enhanced_mixed_precision_demo.py  enhanced_training_pipeline.py  evaluation.py  evaluation_example.py  fine_tuning.py  fine_tuning_tutorial.py  finetune_genome_annotation.py  finetune_protein_function.py  finetune_variant_effect.py  generation.py  mixed_precision_demo.py  performance_monitoring_demo.py  pretraining_examples.py  real_world_genomic_analysis.py  streamlined_training_examples.py  train_example.py
hyena_glt/: __init__.py
interpretability_outputs/: batch_analysis_summary.json
job_scripts/: complete_pipeline.csh  preprocess_job.csh  training_job.csh
notebooks/: 01_introduction.ipynb  02_tokenization.ipynb  02_tokenization_deep_dive.ipynb  03_hyena_architecture.ipynb  03_model_architecture.ipynb  04_training.ipynb  05_evaluation.ipynb  06_fine_tuning.ipynb  07_generation.ipynb  fine_tuning_tutorial.py
scripts/: README.md  anti_duplication_discovery.py  benchmark_hyena_glt.py  context_recovery.py  git_manager.sh  git_push_all_remotes.sh  new_session.py  optimize_hyena_glt.py  quick_anti_duplication_check.py  run_pretraining.py  run_tests.py  validate_framework.py
session_notes/: README.md  SESSION_2025-05-31.md  SESSION_CONTINUATION_2025-05-31.md  SESSION_END_2025-05-31.md  SESSION_END_2025-06-01.md  SESSION_SUMMARY_2025-05-30.md
tests/: __init__.py  simple_integration_test.py  test_data_integration.py  test_mixed_precision_implementation.py  test_pretraining_setup.py  utils.py
tutorial/: 00_QUICK_START.md  01_FUNDAMENTALS.md  02_HYENA_INTEGRATION.md  03_DATA_PIPELINE.md  04_TRAINING.md  05_EVALUATION.md  06_PRODUCTION.md  07_ADVANCED.md  README.md
validation_results/: validation_report.json
(+120 files in other folders)
